[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/heather_granville.png" type="Texture" id=1]
[ext_resource path="res://AttributeInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://ActorInfo.gd" type="Script" id=3]

[node name="ActorInfo" type="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_bottom = 6.10352e-05
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActorSprite" type="Sprite" parent="."]
position = Vector2( 100, 200 )
texture = ExtResource( 1 )

[node name="NameLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 30.0
margin_right = -100.0
margin_bottom = 70.0001
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.443137, 0.443137, 0.443137, 1 )
text = "Heather Granville"
align = 1
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 300.0
margin_right = -100.0
margin_bottom = 320.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EXPLORER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthAttribute" parent="." instance=ExtResource( 2 )]
margin_top = 370.0
margin_right = 1.52588e-05
margin_bottom = -300.0

[node name="SpeedAttribute" parent="." instance=ExtResource( 2 )]
margin_top = 450.0
margin_right = 1.52588e-05
margin_bottom = -220.0

[node name="KnowledgeAttribute" parent="." instance=ExtResource( 2 )]
margin_top = 530.0
margin_right = 1.52588e-05
margin_bottom = -140.0

[node name="SanityAttribute" parent="." instance=ExtResource( 2 )]
margin_top = 610.0
margin_right = 1.52588e-05
margin_bottom = -60.0001
